name:                example-wai-server
version:             0.0.0
synopsis:            Simple JSON API server using Warp and WAI
description:         Please see README.md
homepage:            http://github.com/kemitchell/wai-server
license:             MIT
license-file:        LICENSE
author:              Kyle E. Mitchell
maintainer:          kyle@kemitchell.com
copyright:           2016 Kyle E. Mitchell
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     ExampleWAIServer
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-types
                     , text
                     , wai

executable example-wai-server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , example-wai-server
                     , wai
                     , wai-extra
                     , warp

test-suite example-wai-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , example-wai-server
